# photoscope

./: Cargo.toml  README.md
src/: file_manager.rs  folder_selector.rs  gui.rs  gui_v2.rs  image_analyzer.rs  loading.rs  loading_gui.rs  main.rs
