[package]
name = "photoscope"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
kamadak-exif = "0.5"
eframe = "0.32"
egui = "0.32"
egui-phosphor = "0.10"
clap = { version = "4.5", features = ["derive"] }
rfd = "0.15"
colored = "2.1"
indicatif = "0.17"
walkdir = "2.5"
sha2 = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
